# danish_test_app

./: .gitignore  README.md  pyproject.toml
app/: package-lock.json
app/data/: output.json  output_generated copy.json  output_generated.json  output_generated_questions.json
app/src/: App.jsx  index.css
app/src/components/: ProgressStats.jsx  QuestionCard.jsx
app/src/hooks/: useDailyProgress.js
src/: generate_questions.py
src/extraction/: auto_gen_100.py  chapter1.txt  extract_ch1.py  extract_qa.py  find_chapter1.py  test_inspect.py
