[tool.poetry]
name = "danish-test-app"
version = "0.1.0"
description = "Python backend for Danish Test App"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.27.2.2"
google-adk = "^1.27.2"
pydantic = "^2.12.5"
python-dotenv = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
